crates/sui-graphql-macros/tests/compile/schema_validation_array_field_suggestion.stderr
error: Field 'checkpointss' not found on type 'Query' in path 'checkpointss[].digest'. Did you mean 'checkpoints'?
 --> tests/compile/schema_validation_array_field_suggestion.rs:7:5
  |
7 |     digests: Vec<String>,
  |     ^^^^^^^
